hotfix: fix the alignment of share modal titles and the color of category tags of quiz

--- a/front-end/mind_stack/src/app/pages/study-sets-page/study-sets-page.scss
+++ b/front-end/mind_stack/src/app/pages/study-sets-page/study-sets-page.scss
@@ -1178,7 +1178,7 @@ $transition-normal: 0.3s ease;
     font-weight: 700;
     color: #2E7D5E;
     margin: 0 0 24px 0;
-    text-align: left;
+    text-align: center;
 }
 
 .share-form {
